# s3-a-ml-tracker

./: .dockerignore  .env.example  Dockerfile  app.py  comparator.py  docker-compose.yml  experiments.py  metrics.py  ml_tracker.db  models.py  pyproject.toml  requirements.txt  storage.py
.github/workflows/: ci.yml
calculators/: __init__.py  base.py  classification.py  registry.py  regression.py
dataset_storage/: data.csv
loaders/: __init__.py  base.py  registry.py  sklearn_loader.py  torch_loader.py
model_storage/exp_1/: test-model_v2.pkl
repositories/: __init__.py  base.py  batch_repository.py  evaluation_repository.py  experiment_repository.py  metric_repository.py  model_repository.py
routers/: __init__.py  batch_predict.py  evaluation.py
tests/: conftest.py  test_api_integration.py  test_comparator_service.py  test_experiments_service.py  test_metrics_service.py  test_model_loader.py  test_models_service.py
